# mi-merge

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: main.css
src/: app_model.rs  common_types.rs  emoji_service.rs  entries.rs  global_state.rs  main.rs  merged_timeline.rs  mfm.rs  mi_models.rs  server_cxn.rs  server_note_repo.rs  subject.rs  ws_msg_router.rs  ws_poller.rs
src/common_types/: branch_key.rs  connection.rs  credential.rs  dyn_note_model.rs  error.rs  host.rs  mod.rs  note_key.rs  note_model.rs
src/view/: column.rs  emoji.rs  home.rs  mod.rs  note.rs  reaction.rs
