[package]
name = "mi-merge"
version = "0.1.0"
authors = ["VillSnow <vill.snow@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dioxus = { version = "0.5", features = ["desktop", "router"] }
dioxus-logger = "0.5.0"
dotenv = "0.15.0"
fancy-regex = "0.13.0"
futures-util = "0.3.30"
palette = "0.7.6"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
tokio = { version = "1.38.0", features = ["time"] }
tracing = "0.1.40"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
